<resources>

    <string name="app_name">My Soccer Stats</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_act_open">Indoor Stats</string>
    <string name="group_manager">Manager:</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="group_stats">Stats</string>
    <string name="group_managment">Group Managment</string>
    <string name="start_match">Start Match</string>
    <string name="choose_red_team">Select Red Team</string>
    <string name="choose_yellow_team">Select Yellow Team</string>
    <string name="duration">Duration</string>
    <string name="pause_button">Pause</string>
    <string name="goal_button">Goal!</string>
    <string name="end_game_button">End Game</string>
    <string name="title_activity_main">Indoor Stats</string>
    <string name="title_activity_soccer_prefs">Indoor Soccer Prefrences</string>
    <string name="title_activity_show_settings">Show Settings</string>
    <string name="timer">00:00:00</string>
    <string name="timerMs">.0</string>
    <string name="startText">start</string>
    <string name="resetText">reset</string>
    <string name="stopText">stop</string>
    <string name="backgroundText">Stopwatch</string>
    <string name="adsText">Ads Go Here</string>
    <string name="goalText">goal</string>
    <string name="PlayerName">Player name</string>
    <string name="title_activity_login">My Soccer Stats</string>
    <string name="buttonLogin">Login</string>
    <string name="no_players">No Players</string>
	<string name="reload">Reload</string>
	<string name="send...">Send...</string>
	<string name="empty_player_name">No Name</string>
	<string name="space"> </string>
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
	<string name="newVal">New value</string>
	<string name="emailTtl">Update Email</string>
	<string name="phoneTtl">Update Phone</string>
	<string name="bdayTtl">Update Birth Date</string>
	<string name="updatePlayer">Update Player Info</string>
	<string name="player">Player</string>
	<string name="stats">Statistics</string>
	<string name="group">Group</string>
	<string name="game">Game</string>
	<string name="exit">Exit</string>
	<string name="birthday">Birthday:</string>
	<string name="email">Email:</string>
	<string name="phone">Phone:</string>
	<string name="emptyString"></string>
	<string name="team_1">Team 1</string>
	<string name="team_2">Team 2</string>
	<string name="_0_0">00:00</string>
	<string name="start">Start</string>
	<string name="reset">Reset</string>
</resources>