<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/parentFrameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/backgroundText"
            android:scaleType="fitXY"
            android:src="@drawable/background" >
        </ImageView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="234dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/timerBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/timerbackground"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/timer"
                    style="@style/timerText"
                    android:layout_width="wrap_content"
                    android:text="@string/timer"
                    android:textSize="40sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonarea"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/stopButton"
                    style="@style/buttonText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/stopbuttonstates"
                    android:onClick="stopClick"
                    android:shadowColor="#DF726E"
                    android:text="@string/stopText"
                    android:textColor="#7A1100"
                    android:textSize="20sp"
                    android:visibility="gone" >
                </Button>

                <Button
                    android:id="@+id/startButton"
                    style="@style/buttonText"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/startbuttonstates"
                    android:onClick="startClick"
                    android:shadowColor="#FBEBC5"
                    android:text="@string/startText"
                    android:textColor="#5F3A00"
                    android:textSize="20sp" >
                </Button>

                <Button
                    android:id="@+id/resetButton"
                    style="@style/buttonText"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/resetbuttonstates"
                    android:onClick="resetClick"
                    android:shadowColor="#959597"
                    android:text="@string/resetText"
                    android:textColor="#2E2E2E"
                    android:textSize="20sp" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonarea"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/goalButton"
                    style="@style/buttonText"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/startbuttonstates"
                    android:onClick="goalClick"
                    android:shadowColor="#FBEBC5"
                    android:text="@string/goalText"
                    android:textColor="#5F3A00"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/backgroundText"
                    android:src="@drawable/hline" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/backgroundText"
                    style="@style/backgroundText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/backgroundText" />
            </ScrollView>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>