<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="horizontal" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/CenterScreenLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rgroup_divider"
        android:layout_below="@id/actionbar" >

        <LinearLayout
            android:id="@+id/linearLayoutTimer"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTimer"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="setBackwards"
                android:text="@string/_0_0"
                android:textColor="#FFFFFF"
                android:textSize="80sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/buttonStart"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:height="50dp"
                    android:text="@string/start"
                    android:width="100dp" />

                <Button
                    android:id="@+id/buttonReset"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:height="50dp"
                    android:text="@string/reset"
                    android:width="100dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTeamsTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayoutTimer"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/team_1" />

            <TextView
                android:id="@+id/txtGameScore"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_0_0" />

            <TextView
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/team_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTeamsLists"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linearLayoutTeamsTitle"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <ListView
                    android:id="@+id/listView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include
        android:id="@+id/rgroup_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/actnavbar" />

</RelativeLayout>